--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "pre-commit": "^1.2.2",
         "prettier": "^3.2.4",
+        "styled-normalize": "^8.1.0",
         "typescript": "^5.2.2",
         "vite": "^5.0.8"
     },
