--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.18.1",
         "axios": "^1.6.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-query": "^3.39.3",
         "react-router-dom": "^6.21.3"
     },
     "devDependencies": {
